# Video-Summary

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Analyzer.py  CONTRIBUTING.md  Config.py  ContourExctractor.py  Dockerfile  Exporter.py  IMPROVEMENTS.md  Importer.py  LICENSE  Layer.py  LayerFactory.py  README.md  VideoReader.py  bm.csv  demo_config.json  docker-compose.yml  licens.txt  main.py  motion_detector.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/workflows/: ci.yml
Application/: Analyzer.py  Config.py  ContourExctractor.py  Exporter.py  HeatMap.py  Importer.py  Layer.py  LayerFactory.py  LayerManager.py  Logger.py  VideoReader.py  __init__.py
Application/Classifiers/: Classifier.py  ClassifierInterface.py  ClassifierOCV.py  coco_map.json
configs/: README.md  default.yaml  fast.yaml  high-sensitivity.yaml  low-sensitivity.yaml
docs/: bm.csv  plot.py  stats.json
generate test footage/: gen.py  kap.py
output/: 3.txt  out.txt  short.txt
tests/: test_config.py  test_logger.py
